# order-book-pipeline

./: .env.example  .env.oci.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile.consumers  Dockerfile.dashboard  Dockerfile.flink  Dockerfile.ingestion  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  compose.oci.yml  create_structure.sh  docker-compose.yml  init-db.sql  justfile  pyproject.toml  requirements-flink.txt  requirements.txt
.github/workflows/: deploy-oci.yml  infra-apply-oci.yml  infra-apply.yml  test.yml
.streamlit/: config.toml
.terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
dashboard/: app.py
dashboard/components/: alert_feed.py  alert_heatmap.py  gauge.py  imbalance_trend.py  infra_metrics.py  metrics_cards.py  multi_metric_windows.py  orderbook_depth_heatmap.py  orderbook_viz.py  services_health_status.py  timeseries.py  volatility_heatmap.py  windowed_aggregates.py  windowed_statistics.py
dashboard/data/: __init__.py  data_layer.py  db_queries.py  flink_queries.py  redis_queries.py  redpanda_queries.py
dashboard/utils/: __init__.py  async_runner.py  charts.py  formatting.py
db/: schema.sql
db/migrations/: 20260301000100_baseline_schema.sql  20260301000200_retention_ttl.sql  20260302000100_add_avg_mid_price_windowed.sql  20260310000100_retention_ttl_updates.sql  20260310230000_retention_ttl_alerts.sql  2026_03_01_baseline_schema.sql  2026_03_01_retention_ttl.sql  2026_03_02_add_avg_mid_price_windowed.sql
deployment/: DEPL_STRATEGY_COMPARISON.md  QUICK_REF.md  Q_AND_A.md  ZERO_COST_PLAN.md  ZERO_COST_QUICK_START.md
docs/: API.md  ARCHITECTURE.md  COCKROACH_REFACTOR_PLAN.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  FLINK.md  METRICS.md  REDPANDA.md  TROUBLESHOOTING.md
flink/jobs/: README.md
scripts/: backfill_data.py  benchmark.py  export_data.py  test_connection.py
src/: __init__.py  config.py
src/common/: database.py  kafka_client.py  models.py  redis_client.py  redpanda_client.py  utils.py
src/consumers/: db_consumer.py  main.py  redis_consumer.py
src/ingestion/: alert_engine.py  data_writer.py  downsampling.py  main.py  metrics_calculator.py  orderbook_parser.py  websocket_client.py
src/jobs/: orderbook_alert.py  orderbook_alerts.py  orderbook_metrics.py  orderbook_windows.py
terraform/envs/prod/: .terraform.lock.hcl  backend.oci.hcl.example  backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/cockroach/: main.tf  outputs.tf  (+1 more)
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: orderbook_snapshot.json
tests/integration/: test_database.py  test_db_consumer.py  test_flink_pipeline.py  test_ingestion_pipeline.py  test_redis.py  test_redis_consumer.py  test_redpanda.py  test_websocket.py
tests/unit/: test_alert_engine.py  test_downsampling.py  test_ingestion_main.py  test_metrics_calculator.py  test_models.py  test_redis_consumer.py  tests_orderbook_parser.py
(+13 files in other folders)
