[project]
name = "orderbook-monitor"
version = "0.1.0"
description = "Real-time order book imbalance monitor for cryptocurrency trading"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Spencer Carlson", email = "08.writing.chime@icloud.com"}
]
keywords = ["trading", "orderbook", "crypto", "real-time", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core dependencies
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # WebSocket and async
    "websockets>=12.0",
    "aiohttp>=3.9.1",
    
    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    
    # Redis
    "redis>=5.0.1",
    "hiredis>=2.2.3",
    
    # Data processing
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "polars>=0.19.19",
    
    # Dashboard
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    "streamlit-autorefresh>=1.0.1",
    
    # Logging and monitoring
    "loguru>=0.7.2",
    "prometheus-client>=0.19.0",

    "kafka-python-ng>=2.2.0",
]

dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "ipython>=8.19.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/ingestion", "src/jobs"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "ipython>=8.19.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration (require database, redis, etc.)",
]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"